--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "GatsbyJS Boilerplate",
+	"name": "wklsh-portofolio-2020",
 	"version": "1.0.0",
-	"description": "GatsbyJS Boilerplate",
+	"description": "PORTFOLIO 2020",
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
@@ -19,8 +19,15 @@
 	"homepage": "https://github.com/wklsh/portofolio-2020#readme",
 	"dependencies": {
 		"gatsby": "^2.19.12",
+		"gatsby-plugin-lodash": "^3.1.20",
+		"gatsby-plugin-netlify-cms": "^4.1.38",
 		"gatsby-plugin-sass": "^2.1.28",
+		"gatsby-source-filesystem": "^2.1.48",
+		"gatsby-transformer-remark": "^2.6.50",
+		"lodash": "^4.17.15",
+		"netlify-cms-app": "^2.11.13",
 		"node-sass": "^4.13.1",
+		"prop-types": "^15.7.2",
 		"react": "^16.12.0",
 		"react-dom": "^16.12.0"
 	},
