--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,8 @@
 		"global-require": 0,
 		"import/no-cycle": 0,
 		"no-shadow": "off",
-		"no-param-reassign": ["error", { "props": true, "ignorePropertyModificationsFor": ["draft"] }] // immer whitelisting
+		"no-param-reassign": ["error", { "props": true, "ignorePropertyModificationsFor": ["draft"] }], // immer whitelisting
+		"react/forbid-prop-types": 0,
+		"react/no-danger": 0
 	}
 }
