--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
 	"homepage": "https://github.com/wklsh/portofolio-2020#readme",
 	"dependencies": {
 		"gatsby": "^2.19.12",
+		"gatsby-plugin-alias-imports": "^1.0.5",
+		"gatsby-plugin-layout": "^1.1.22",
 		"gatsby-plugin-lodash": "^3.1.20",
 		"gatsby-plugin-netlify-cms": "^4.1.38",
 		"gatsby-plugin-sass": "^2.1.28",
+		"gatsby-plugin-web-font-loader": "^1.0.4",
 		"gatsby-source-filesystem": "^2.1.48",
 		"gatsby-transformer-remark": "^2.6.50",
 		"lodash": "^4.17.15",
@@ -29,7 +32,10 @@
 		"node-sass": "^4.13.1",
 		"prop-types": "^15.7.2",
 		"react": "^16.12.0",
-		"react-dom": "^16.12.0"
+		"react-dom": "^16.12.0",
+		"remark": "^11.0.2",
+		"remark-html": "^10.0.0",
+		"sanitize-html": "^1.21.1"
 	},
 	"devDependencies": {
 		"eslint": "^6.8.0",
