--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"develop": "gatsby develop -H 0.0.0.0"
+		"develop": "gatsby develop -H 0.0.0.0",
+		"build": "gatsby build"
+
 	},
 	"repository": {
 		"type": "git",
