--- a/admin/config.yml
+++ b/admin/config.yml
@@ -4,12 +4,12 @@ backend:
 media_folder: static/assets
 public_folder: /assets
 collections:
-  - label: "Pages"
-    name: "pages"
+  - label: Pages
+    name: pages
     files:
-      - file: "src/markdown-pages/index.md"
-        label: "Index Page"
-        name: "index"
+      - file: src/markdown-pages/index.md
+        label: Index Page
+        name: index
         fields:
           - { label: Intro text, name: intro, widget: text }
   - name: blog
