--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"sanitize-html": "^1.21.1"
 	},
 	"devDependencies": {
+		"babel-eslint": "^10.1.0",
 		"eslint": "^6.8.0",
 		"eslint-config-airbnb": "^18.0.1",
 		"eslint-config-prettier": "^6.10.0",
