--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"gatsby-plugin-alias-imports": "^1.0.5",
 		"gatsby-plugin-layout": "^1.1.22",
 		"gatsby-plugin-lodash": "^3.1.20",
+		"gatsby-plugin-minify-classnames": "^0.1.2",
 		"gatsby-plugin-netlify-cms": "^4.1.38",
 		"gatsby-plugin-sass": "^2.1.28",
 		"gatsby-source-filesystem": "^2.1.48",
