--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"prop-types": "^15.7.2",
 		"react": "^16.12.0",
 		"react-dom": "^16.12.0",
+		"react-helmet": "^5.2.1",
 		"remark": "^11.0.2",
 		"remark-html": "^10.0.0",
 		"sanitize-html": "^1.21.1"
