--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"main": "index.js",
 	"scripts": {
 		"develop": "gatsby develop -H 0.0.0.0",
-		"build": "gatsby build"
+		"build": "gatsby build",
+		"clean": "gatsby clean"
 	},
 	"repository": {
 		"type": "git",
