--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,9 @@
 {
+	"env": {
+		"browser": true,
+		"node": true,
+		"jasmine": true
+	},
 	"extends": ["airbnb", "prettier", "prettier/react"],
 	"parser": "babel-eslint",
 	"plugins": ["prettier"],
@@ -8,7 +13,13 @@
 		"global-require": 0,
 		"import/no-cycle": 0,
 		"no-shadow": "off",
-		"no-param-reassign": ["error", { "props": true, "ignorePropertyModificationsFor": ["draft"] }], // immer whitelisting
+		// "no-param-reassign": ["error", { "props": true, "ignorePropertyModificationsFor": ["draft"] }], // immer whitelisting
+		"no-param-reassign": [
+			2,
+			{
+				"props": false
+			}
+		],
 		"react/forbid-prop-types": 0,
 		"react/no-danger": 0
 	}
