--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "gatsby-netlifyCMS-boilerplate",
 	"version": "1.0.0",
-	"description": "Gatsby x NetlifyCMS boilerplate",
+	"description": "Gatsby + NetlifyCMS boilerplate",
 	"main": "index.js",
 	"scripts": {
 		"develop": "gatsby develop -H 0.0.0.0",
@@ -22,7 +22,6 @@
 		"gatsby": "^2.19.12",
 		"gatsby-plugin-alias-imports": "^1.0.5",
 		"gatsby-plugin-layout": "^1.1.22",
-		"gatsby-plugin-lodash": "^3.1.20",
 		"gatsby-plugin-minify-classnames": "^0.1.2",
 		"gatsby-plugin-netlify-cms": "^4.1.38",
 		"gatsby-plugin-sass": "^2.1.28",
