--- a/.eslintrc
+++ b/.eslintrc
@@ -21,6 +21,8 @@
 			}
 		],
 		"react/forbid-prop-types": 0,
-		"react/no-danger": 0
+		"react/no-danger": 0,
+		"react/state-in-constructor": 0,
+		"react/no-unused-state": 0
 	}
 }
